# lipa-business-lib

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs
.github/: dependabot.yml.disabled
.github/workflows/: build.yml  code-analysis.yml  deploy-release.yml  integration-tests.yml
authors/: .gitignore  Cargo.toml
authors/src/: authors.udl  errors.rs  graphql.rs  jwt.rs  lib.rs  provider.rs
authors/tests/: integration_tests.rs
lipa-errors/: Cargo.toml
lipa-errors/src/: lib.rs
src/: address.rs  auth.rs  errors.rs  hex_utils.rs  lib.rs  lipabusinesslib.udl  secrets.rs  signing.rs  wallet.rs
tests/: auth_tests.rs  integration_tests.rs
tests/setup/: mod.rs
