[package]
name = "lipabusinesslib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "uniffi_lipabusinesslib"

[dependencies]
uniffi = "0.20.0"
thiserror = "1.0.36"
log = "0.4.17"
bdk = { version = "0.22.0", features = ["keys-bip39"] }
rand = "0.8.5"
secp256k1 = { version = "0.22.1", features = ["bitcoin_hashes"] }
sled = "0.34.7"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11"

[build-dependencies]
camino = "1.1.1"
uniffi_bindgen = "0.20.0"
