[package]
name = "lipabusinesslib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "uniffi_lipabusinesslib"

[features]
nigiri = ["simplelog"]

[dependencies]
bdk = { version = "0.28.2", features = ["keys-bip39"] }
bip21 = "0.2.0"
log = "0.4.19"
rand = "0.8.5"
# Explicitly depend on secp256k1 for secp256k1::SECP256K1.
secp256k1 = { version = "0.24.3", features = ["global-context"] }
sled = "0.34.7"
thiserror = "1.0.44"
uniffi = "0.24.3"

simplelog = { version ="0.12.0", features = ["test"], optional = true }

perro = { git = "https://github.com/getlipa/perro", tag = "v1.1.0" }
honey-badger = { git = "https://github.com/getlipa/wild", tag = "v1.4.1" }

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[build-dependencies]
camino = "1.1.6"
uniffi_bindgen = "0.25.1"
