[package]
name = "authors"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
name = "authors"

[dependencies]
graphql_client = { version = "0.12.0", features = ["reqwest-blocking"]}
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
base64 = "0.21.0"
bdk = { version = "0.26.0", features = ["keys-bip39"] }
secp256k1 = { version = "0.24.3", features = ["global-context"] }
rand = "0.8.5"

lipa-errors = {path = "../lipa-errors"}
